apps/app2/http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app2-http
spec:
  parentRefs:
    - namespace: default
    - name: gateway
    -
  hostnames:
    - "app2.localhost"
  rules:
    - backendRefs:
        - name: app2
          port: 80
