apps/app2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: default
spec:
  rules:
    - host: app2.bergtobias.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app22
                port:
                  number: 80
